Fixed memory leaks and performance issues